--- a/homepage.html
+++ b/homepage.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>SJAM Connect</title>
-    </head>
 
-    <body>
-        <h1>Testing</h1>
-        <h2>Hello!</h2>
-    </body>
+<head>
+    <title>SJAM Connect</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/navigation.css">
+    <link rel="stylesheet" href="../css/homepage.css">
+</head>
+
+<body>
+    <div class="top">
+        <div class="container">
+            <div class="logo">
+                <img src="img/SJAM-logo.png"/>
+                <p>SJAM Connect</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Navigation bar -->
+    <nav>
+        <ul class="sidebar">
+            <li onclick=hideSidebar()> <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px"
+                        viewBox="0 -960 960 960" width="24px" fill="black">
+                        <path
+                            d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
+                    </svg></a></li>
+            <li> <a href="#">Home</a></li>
+            <li> <a href="#">Our Services</a></li>
+            <li> <a href="#">Feedback</a></li>
+            <li> <a href="#">Contact Us</a></li>
+            <li> <a href="#">Logout</a></li>
+        </ul>
+
+        <ul>
+            <li class="hideOnMobile"> <a href="#">Home</a></li>
+            <li class="hideOnMobile"> <a href="#">Our Services</a></li>
+            <li class="hideOnMobile"> <a href="#">Feedback</a></li>
+            <li class="hideOnMobile"> <a href="#">Contact Us</a></li>
+            <li class="hideOnMobile"> <a href="#">Logout</a></li>
+            <li class="menuButton" onclick=showSideBar()> <a href="#"><svg xmlns="http://www.w3.org/2000/svg"
+                        height="24px" viewBox="0 -960 960 960" width="24px" fill="black">
+                        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+                    </svg></a></li>
+        </ul>
+    </nav>
+
+</body>
+
 </html>
