--- a/homepage.html
+++ b/homepage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/navigation.css">
     <link rel="stylesheet" href="../css/homepage.css">
+    <link rel="stylesheet" href="./css/ambulance.css">
 </head>
 
 <body>
