update fronted and logic ambulanceManagement

--- a/ambulance/ambulanceManagement.html
+++ b/ambulance/ambulanceManagement.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../css/ambulance.css">
 </head>
 <body>
-    <h2>Ambulance Management</h2>
+    <div class="header">
+        <img src="../img/SJAM-logo.png" alt="Logo" class="logo">
+        <h1>Ambulance Management</h1>
+    </div>
     <a href="../homepage.html" class="button">Back</a>
     <button class="button" onclick="showAddAmbulanceForm()">Add Ambulance</button>
     <div id="ambulance-list">
