--- a/homepage.html
+++ b/homepage.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="../css/navigation.css">
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="stylesheet" href="./css/ambulance.css">
+
+    <script>
+        function showSideBar() {
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'flex'
+        }
+
+        function hideSidebar() {
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'none'
+        }
+    </script>
 </head>
 
 <body>
