--- a/Hall/addHall.html
+++ b/Hall/addHall.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        
+        <!-- Add hall form -->
         <div class="form-container">
             <h2>Add Hall</h2>
             <form id="hallForm">
