--- a/Hall/addHall.html
+++ b/Hall/addHall.html
@@ -9,7 +9,7 @@
 <body>
     <div class="overlay"></div> <!-- Background overlay -->
     <div class="header">
-        <img src="" alt="Logo" class="logo">
+        <img src="..\img\SJAM-logo.png" alt="Logo" class="logo">
         <h1>Hall Management</h1>
     </div>
     <div class="button-container">
