--- a/Hall/hallManagement.html
+++ b/Hall/hallManagement.html
@@ -29,8 +29,13 @@
         <input type="text" id="location" placeholder="Level 2" required>
         <label>Facilities:</label>
         <input type="text" id="facility" placeholder="Audio Equipment" required>
-        <button class="button" id="saveButton" onclick="saveHall()">Save</button>
-        <button class="button" onclick="closeForm()">Cancel</button>
+        <div>
+            <button class="button" id="saveButton" onclick="saveHall()">Save</button>
+        </div>
+        <div>
+            <button class="button" onclick="closeForm()">Cancel</button>
+        </div>
+        
     </div>
 
     <div id="hall-list">
