--- a/homepage.html
+++ b/homepage.html
@@ -9,18 +9,8 @@
     <link rel="stylesheet" href="css/navigation.css">
     <link rel="stylesheet" href="css/homepage.css">
     <link rel="stylesheet" href="css/ambulance.css">
+    <script src="script/officerNavBar.js" defer></script>
 
-    <script>
-        function showSideBar() {
-            const sidebar = document.querySelector('.sidebar')
-            sidebar.style.display = 'flex'
-        }
-
-        function hideSidebar() {
-            const sidebar = document.querySelector('.sidebar')
-            sidebar.style.display = 'none'
-        }
-    </script>
 </head>
 
 <body>
@@ -34,32 +24,8 @@
     </div>
 
     <!-- Navigation bar -->
-    <nav>
-        <ul class="sidebar">
-            <li onclick=hideSidebar()> <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px"
-                        viewBox="0 -960 960 960" width="24px" fill="black">
-                        <path
-                            d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
-                    </svg></a></li>
-            <li> <a href="#">Home</a></li>
-            <li> <a href="#">Our Services</a></li>
-            <li> <a href="#">Feedback</a></li>
-            <li> <a href="#">Contact Us</a></li>
-            <li> <a href="#">Logout</a></li>
-        </ul>
+    <div id="navbar"></div>
 
-        <ul>
-            <li class="hideOnMobile"> <a href="#">Home</a></li>
-            <li class="hideOnMobile"> <a href="#">Our Services</a></li>
-            <li class="hideOnMobile"> <a href="#">Feedback</a></li>
-            <li class="hideOnMobile"> <a href="#">Contact Us</a></li>
-            <li class="hideOnMobile"> <a href="#">Logout</a></li>
-            <li class="menuButton" onclick=showSideBar()> <a href="#"><svg xmlns="http://www.w3.org/2000/svg"
-                        height="24px" viewBox="0 -960 960 960" width="24px" fill="black">
-                        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
-                    </svg></a></li>
-        </ul>
-    </nav>
 
 </body>
 
