--- a/mainPage/officerHomepage.html
+++ b/mainPage/officerHomepage.html
@@ -46,7 +46,7 @@
             <div class="menu-item">
                 <div class="row">
                     <div class="services-items col p-2">
-                        <a href="../Hall/manageHallBooking.php">
+                        <a href="../Hall/viewHallBooking.php">
                             <div class="services-img">
                                 <img src="../img/hall.png" alt="Hall icon">
                             </div>
